<resources>
    <string name="app_name">GranjaEnCasa</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_registarce">GranjaEnCasa</string>
    <string name="title_activity_main2">GranjaEnCasa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_modificar">GranjaEnCasa</string>
    <string name="title_activity_registrarse">GranjaEnCasa</string>
    <string name="nombre">nombre</string>
    <string name="apellido">apellido</string>
    <string name="nombre_usuario">nombre_usuario</string>
    <string name="password">password</string>
    <string name="repetir_password">repetir_password</string>
    <string name="email">email</string>
    <string name="telefono">telefono</string>
    <string name="direccion">direccion</string>
    <string name="registrar">registrar</string>
    <string name="el_usuario_ya_existe">el_usuario_ya_existe</string>
    <string name="las_password_no_coinciden">las_password_no_coinciden</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="loguearse">Loguearse</string>
    <string name="el_usuario_o_contrace_a_no_son_correctas">el_usuario_o_contrace_a_no_son_correctas</string>
    <string name="registrarse">Registrarse</string>
    <string name="hola_mundo">Hola MUNDO</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="modificarusuario">ModificarUsuario</string>
    <string name="title_activity_maps">GranjaEnCasa</string>
    <string name="title_activity_filtros">GranjaEnCasa</string>
    <string name="title_activity_cam_password">GranjaEnCasa</string>
    <string name="title_activity_mostrar_carrito">GranjaEnCasa</string>
    <string name="title_activity_mostrar_boleta">activity_mostrar_boleta</string>
    <string name="title_activity_mostrar_datos_boleta">ActivityMostrarDatosBoleta</string>

</resources>
